--- a/src/work.module.css
+++ b/src/work.module.css
@@ -1,10 +1,6 @@
-.Home {
-
-}
-
 .content {
-  height: 100vh;
   margin-left: 70px;
+  height: 100vh;
   background-image: url('./assets/background0.png');
   background-repeat: no-repeat;
   background-size: 100% 100%;
@@ -15,19 +11,29 @@
   position: fixed;
   width: 240px;
   height: 100vh;
-  color: #885454;
+  background: #885454;
 }
 
 .content .header {
   margin-left: 0px;
-  background: #885454;
-  width: 240px;
-  height: 100vh;
-  color: rgb(255, 255, 255);
+  color: #fff;
   font-size: 15px;
 }
 
 .content .header h1 {
   font-size: 3.5vh;
   margin-left: 30px;
+}
+
+.content .addws {
+  color:white;
+  display: flex;
+  font-size: 18px;
+  margin-top: 10px;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+.content .addws .plus {
+  font-size: 25px;
 }
