--- a/src/work.module.css
+++ b/src/work.module.css
@@ -38,4 +38,14 @@
   font-size: 25px;
 }
 
+.content .bar .project{
+  color:white;
+  margin-top: 10px;
+  margin-left: 10px;
+  cursor:pointer;
+  font-size: 11px;
+}
 
+.SearchBox {
+  margin-left: 10px;
+}
