--- a/src/work.module.css
+++ b/src/work.module.css
@@ -99,13 +99,22 @@
   padding: 5px 15px;
   cursor:pointer;
   font-size: 18px;
-  background: #a76c6c;
+  background: #a76c6c4d;
   border-radius: 30px;
 }
 
-.ag {
+.adda {
   display: flex;
   font-size: 16px;
+}
+
+.adda:hover{
+  text-decoration:underline;
+  color: black;
+}
+
+.adda .plus{
+  font-size: 20px;
 }
 
 .agenda
