--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -54,3 +54,68 @@
   border-radius: 5px;
 }
 
+.sidebar .navList .sidebarItem .tooltip{
+  position: absolute;
+  font-size: 20px;
+  left: 70px;
+  top: 150;
+  transform: translateY(-80%);
+  border-radius: 12px;
+  height: 35px;
+  width: 170px;
+  background: #fff;
+  line-height: 25px;
+  text-align: center;
+  box-shadow: 0 5px 10px rgba(173, 20, 20, 0.2);
+  transition: 0.5s all;
+  opacity: 0;
+  pointer-events: none;
+  z-index: 9999999;
+}
+
+.sidebar .navList .sidebarItem:hover .tooltip{
+  color: black;
+  transform: translateY(0%);
+  border-radius: 12px;
+  background: #fff;
+  line-height: 35px;
+  text-align: center;
+  box-shadow: 0 5px 10px rgba(173, 20, 20, 0.2);
+  transition: 0s;
+  opacity: 1;
+  pointer-events: none;
+  z-index: 9999999;
+}
+
+.sidebar .navList .account .tooltip{
+  position: absolute;
+  font-size: 20px;
+  left: 70px;
+  top: 150;
+  transform: translateY(-80%);
+  border-radius: 12px;
+  height: 35px;
+  width: 170px;
+  background: #fff;
+  line-height: 25px;
+  text-align: center;
+  box-shadow: 0 5px 10px rgba(173, 20, 20, 0.2);
+  transition: 0.5s all;
+  opacity: 0;
+  pointer-events: none;
+  z-index: 9999999;
+}
+
+.sidebar .navList .account:hover .tooltip{
+  color: black;
+  transform: translateY(0%);
+  border-radius: 12px;
+  background: #fff;
+  line-height: 35px;
+  text-align: center;
+  box-shadow: 0 5px 10px rgba(173, 20, 20, 0.2);
+  transition: 0s;
+  opacity: 1;
+  pointer-events: none;
+  z-index: 9999999;
+}
