--- a/src/work.module.css
+++ b/src/work.module.css
@@ -123,3 +123,25 @@
   font-size: 16px;
   margin-left: 15px;
 }
+
+.editor {
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  cursor: pointer;
+}
+
+.delete:hover{
+  border-radius: 30px;
+  background: rgba(255, 255, 255, 0.199);
+}
+
+.rename:hover{
+  border-radius: 30px;
+  background:rgba(255, 255, 255, 0.199);
+}
+
+.container{
+  display: flex;
+  justify-content: space-between;
+}
