--- a/src/work.module.css
+++ b/src/work.module.css
@@ -133,15 +133,20 @@
 
 .delete:hover{
   border-radius: 30px;
-  background: rgba(255, 255, 255, 0.199);
+  background: rgba(0, 0, 0, 0.21);
 }
 
 .rename:hover{
   border-radius: 30px;
-  background:rgba(255, 255, 255, 0.199);
+  background:rgba(0, 0, 0, 0.21);
 }
 
 .container{
+  display: flex;
+  justify-content: space-between;
+}
+
+.subp{
   display: flex;
   justify-content: space-between;
 }
