--- a/src/Home.module.css
+++ b/src/Home.module.css
@@ -11,7 +11,7 @@
   background-position: center center;
 }
 
-.content .header {
+/* .content .header {
   margin-left: 3vh;
   color: #fff;
   font-size: 25px;
@@ -19,7 +19,7 @@
 
 .content .header h1 {
   font-size: 8vh;
-}
+} */
 
 .content .description {
   margin-left: 3vh;
@@ -31,21 +31,45 @@
 
 .content .description p {
   font-size: 2.5vh;
+  font-weight: bold;
 }
 
-.btn {
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-
-.content .welcome {
-  font-size: 20px;
-  padding: 8px 40px;
+.header {
+  font-family: 'Source Sans Pro', Arial, sans-serif;
+  background: transparent;
+  text-transform: uppercase;
   color: #fff;
+  margin-left: 3vh;
+  letter-spacing: 0px;
+  padding:20px;
+}
+
+
+.h1 {
+  font-size:8vh;
+  position:relative;
   font-weight: bold;
   cursor: pointer;
-  position: absolute;
-  top: 20px;
-  right: 20px;
+}
+
+/* .superShadow {
+  text-shadow:     0 1px 0 hsl(174,5%,80%),
+	                 0 2px 0 hsl(174,5%,75%),
+	                 0 3px 0 hsl(174,5%,70%),
+	                 0 4px 0 hsl(174,5%,66%),
+	                 0 5px 0 hsl(174,5%,64%),
+	                 0 6px 0 hsl(174,5%,62%),
+	                 0 7px 0 hsl(174,5%,61%),
+	                 0 8px 0 hsl(174,5%,60%),
+
+	                 0 0 5px rgba(0,0,0,.05),
+	                0 1px 3px rgba(0,0,0,.2),
+	                0 3px 5px rgba(0,0,0,.2),
+	               0 5px 10px rgba(0,0,0,.2),
+	              0 10px 10px rgba(0,0,0,.2),
+	              0 20px 20px rgba(0,0,0,.3);
+}*/
+
+strong{
+  font-size:200px;
 }
