--- a/src/Home.module.css
+++ b/src/Home.module.css
@@ -24,7 +24,7 @@
 .content .description {
   margin-left: 3vh;
   position: relative;
-  top: 170px;
+  top: 150px;
   color: black;
   font-size: 15px;
 }
@@ -41,7 +41,7 @@
   color: #fff;
   margin-left: 3vh;
   letter-spacing: 0px;
-  padding:20px;
+  padding:50px 20px;
 }
 
 
@@ -52,7 +52,7 @@
   cursor: pointer;
 }
 
-/* .superShadow {
+.superShadow {
   text-shadow:     0 1px 0 hsl(174,5%,80%),
 	                 0 2px 0 hsl(174,5%,75%),
 	                 0 3px 0 hsl(174,5%,70%),
@@ -68,7 +68,7 @@
 	               0 5px 10px rgba(0,0,0,.2),
 	              0 10px 10px rgba(0,0,0,.2),
 	              0 20px 20px rgba(0,0,0,.3);
-}*/
+}
 
 strong{
   font-size:200px;
