--- a/src/components/SearchBox.module.css
+++ b/src/components/SearchBox.module.css
@@ -1,9 +1,9 @@
-.search {
+.search input[type=text] {
   height: 28px;
   width: 60px;
   transition: width 0.4s ease-in-out;
 }
 
-input[type=text]:focus {
+.search input[type=text]:focus {
   width: 70%;
 }
