--- a/src/Home.module.css
+++ b/src/Home.module.css
@@ -53,23 +53,23 @@
 }
 
 .superShadow {
-  text-shadow:     0 1px 0 hsl(174,5%,80%),
-	                 0 2px 0 hsl(174,5%,75%),
-	                 0 3px 0 hsl(174,5%,70%),
-	                 0 4px 0 hsl(174,5%,66%),
-	                 0 5px 0 hsl(174,5%,64%),
-	                 0 6px 0 hsl(174,5%,62%),
-	                 0 7px 0 hsl(174,5%,61%),
-	                 0 8px 0 hsl(174,5%,60%),
+  text-shadow:  0 1px 0 rgb(255, 255, 255),
+                0 2px 0 rgb(219, 195, 195),
+                0 3px 0 rgb(214, 189, 189),
+                0 4px 0 rgb(196, 172, 172),
+                0 5px 0 rgb(196, 163, 163),
+                0 6px 0 rgb(204, 167, 167),
+                0 7px 0 rgb(172, 141, 141),
+                0 8px 0 rgb(180, 126, 126),
 
-	                 0 0 5px rgba(0,0,0,.05),
-	                0 1px 3px rgba(0,0,0,.2),
-	                0 3px 5px rgba(0,0,0,.2),
-	               0 5px 10px rgba(0,0,0,.2),
-	              0 10px 10px rgba(0,0,0,.2),
-	              0 20px 20px rgba(0,0,0,.3);
+                0 0 5px rgba(0,0,0,.05),
+                0 1px 3px rgba(0,0,0,.1),
+                0 3px 5px rgba(0,0,0,.15),
+              0 5px 10px rgba(0,0,0,.2),
+              0 10px 10px rgba(0,0,0,.25),
+              0 20px 20px rgba(0,0,0,.3);
 }
 
-strong{
+strong {
   font-size:200px;
 }
